--- a/manifests/components/cdi/v1.59.0/kustomization.yaml
+++ b/manifests/components/cdi/v1.59.0/kustomization.yaml
@@ -1,3 +1,4 @@
+namespace: cdi
 resources:
   - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.59.0/cdi-operator.yaml
   - https://github.com/kubevirt/containerized-data-importer/releases/download/v1.59.0/cdi-cr.yaml
