--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -7,7 +7,7 @@ builds:
     env:
       - CGO_ENABLED=0
     main: ./cmd
-    binary: operator
+    binary: bin/manager
     goos:
       - linux
     goarch:
