update: install manifests

--- a/config/dev/manager.yaml
+++ b/config/dev/manager.yaml
@@ -7,3 +7,6 @@ spec:
   template:
     spec:
       securityContext: null
+      containers:
+        - name: manager
+          image: controller:latest
