--- a/manifests/install.yaml
+++ b/manifests/install.yaml
@@ -662,7 +662,7 @@ spec:
         - --health-probe-bind-address=:8081
         command:
         - /manager
-        image: controller:latest
+        image: ghcr.io/mni-cloud/operator:latest
         livenessProbe:
           httpGet:
             path: /healthz
