--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -63,7 +63,7 @@ spec:
         args:
           - --leader-elect
           - --health-probe-bind-address=:8081
-        image: ghcr.io/mni-cloud/operator:latest
+        image: ghcr.io/mni-cloud/operator:0.0.8
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
