feat: parameters option for component

--- a/config/crd/bases/operator.mnicloud.jp_components.yaml
+++ b/config/crd/bases/operator.mnicloud.jp_components.yaml
@@ -50,6 +50,10 @@ spec:
             properties:
               appVersion:
                 type: string
+              parameters:
+                additionalProperties:
+                  type: string
+                type: object
             required:
             - appVersion
             type: object
