--- a/config/crd/bases/operator.mnicloud.jp_services.yaml
+++ b/config/crd/bases/operator.mnicloud.jp_services.yaml
@@ -55,6 +55,11 @@ spec:
                   type: string
                 type: array
                 x-kubernetes-list-type: atomic
+              external:
+                enum:
+                - Ingress
+                - LoadBalancer
+                type: string
               image:
                 type: string
               imagePullSecrets:
@@ -78,9 +83,13 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+              serviceSecretRef:
+                type: string
             required:
             - appVersion
+            - external
             - image
+            - serviceSecretRef
             type: object
           status:
             description: ServiceStatus defines the observed state of Service.
