--- a/manifests/install.yaml
+++ b/manifests/install.yaml
@@ -63,6 +63,10 @@ spec:
             properties:
               appVersion:
                 type: string
+              parameters:
+                additionalProperties:
+                  type: string
+                type: object
             required:
             - appVersion
             type: object
@@ -191,6 +195,11 @@ spec:
                   type: string
                 type: array
                 x-kubernetes-list-type: atomic
+              external:
+                enum:
+                - Ingress
+                - LoadBalancer
+                type: string
               image:
                 type: string
               imagePullSecrets:
@@ -214,9 +223,13 @@ spec:
                 x-kubernetes-list-map-keys:
                 - name
                 x-kubernetes-list-type: map
+              serviceSecretRef:
+                type: string
             required:
             - appVersion
+            - external
             - image
+            - serviceSecretRef
             type: object
           status:
             description: ServiceStatus defines the observed state of Service.
@@ -662,7 +675,7 @@ spec:
         - --health-probe-bind-address=:8081
         command:
         - /manager
-        image: ghcr.io/mni-cloud/operator:0.0.8
+        image: ghcr.io/mni-cloud/operator:0.0.9
         livenessProbe:
           httpGet:
             path: /healthz
