fix: contourのLoadBalancerをKubeOVNで動かす

--- a/manifests/components/contour/v19.0.2/kustomization.yaml
+++ b/manifests/components/contour/v19.0.2/kustomization.yaml
@@ -5,7 +5,12 @@ helmCharts:
     releaseName: contour
     namespace: contour
     includeCRDs: true
-    valuesInline: {}
+    valuesInline:
+      envoy:
+        service:
+          annotations:
+            lb-svc-attachment.kube-system.kubernetes.io/logical_switch: ovn-vpc-external-network
+            ovn.kubernetes.io/attachmentprovider: ovn-vpc-external-network.kube-system
 
 resources:
   - namespace.yaml
