--- a/manifests/components/contour/v19.0.2.yaml
+++ b/manifests/components/contour/v19.0.2.yaml
@@ -9044,6 +9044,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
+    lb-svc-attachment.kube-system.kubernetes.io/logical_switch: ovn-vpc-external-network
+    ovn.kubernetes.io/attachmentprovider: ovn-vpc-external-network.kube-system
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
   labels:
     app.kubernetes.io/component: envoy
