--- a/manifests/components/ingress-nginx/v1.11.3/kustomization.yaml
+++ b/manifests/components/ingress-nginx/v1.11.3/kustomization.yaml
@@ -2,3 +2,4 @@ resources:
 - https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.3/deploy/static/provider/cloud/deploy.yaml
 patches:
 - path: svc-patch.yaml
+- path: ingressclass-patch.yaml
