--- a/manifests/components/keycloak/22.1.2/kustomization.yaml
+++ b/manifests/components/keycloak/22.1.2/kustomization.yaml
@@ -28,7 +28,7 @@ helmCharts:
         - name: KC_SPI_EVENTS_LISTENER_MNI_REGISTRATION_HOOK_IDENTITY_PROVIDER
           value: "identityProvider.replacethis"
         - name: KC_SPI_EVENTS_LISTENER_MNI_REGISTRATION_HOOK_MNI_AUTH_ENDPOINT
-          value: "http://mni-auth.mni-cloud.svc/api/v1alpha1"
+          value: "http://auth.mni-cloud.svc/api/v1alpha1"
         - name: KC_SPI_EVENTS_LISTENER_MNI_REGISTRATION_HOOK_IDP_ENDPOINT
           value: "http://keycloak-headless:8080/realms/cloud"
         - name: KC_SPI_EVENTS_LISTENER_MNI_REGISTRATION_HOOK_USERNAME
