fix: mni-mc params

--- a/manifests/components/mni-mc/0.2.4/kustomization.yaml
+++ b/manifests/components/mni-mc/0.2.4/kustomization.yaml
@@ -14,7 +14,7 @@ helmCharts:
             - name: "NEXTAUTH_URL"
               value: "url.replacethis"
             - name: "NEXTAUTH_SECRET"
-              value: "7034ddba3e52b29938082ef3aba9c5d258ad20fec8028b0a4323b7457d02b430"
+              value: "secret.replacethis"
             - name: "NEXT_PUBLIC_API_DOMAIN"
               value: "mni-mc-api.mni-cloud.svc"
             - name: "NEXT_PUBLIC_DASHBOARD_DOMAIN"
@@ -45,11 +45,11 @@ helmCharts:
             - name: "NEXTAUTH_URL"
               value: "hostname.replacethis"
             - name: "NEXTAUTH_SECRET"
-              value: "7034ddba3e52b29938082ef3aba9c5d258ad20fec8028b0a4323b7457d02b430"
+              value: "secret.replacethis"
             - name: "KEYCLOAK_ID"
-              value: "mni-mc"
+              value: "keycloakid.replacethis"
             - name: "KEYCLOAK_SECRET"
-              value: "t9h0KEs1yQK4UZcoKSnUg2GYkpriLKU1"
+              value: "keycloaksecret.replacethis"
             - name: "KEYCLOAK_ISSUER"
               value: "keycloakurl.replacethis"
           containerPort: 3000
