--- a/manifests/components/mni-mc/0.2.4/ingress.yaml
+++ b/manifests/components/mni-mc/0.2.4/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: mni-mc-ingress
+  name: mni-mc
 spec:
   rules:
     - host: hostname.replacethis
