--- a/manifests/components/mni-mc/0.2.4/kustomization.yaml
+++ b/manifests/components/mni-mc/0.2.4/kustomization.yaml
@@ -27,6 +27,8 @@ helmCharts:
               value: "mni-mc-bs"
             - name: "NEXT_PUBLIC_CTR_DOMAIN"
               value: "mni-mc-ctr"
+            - name: "NEXT_PUBLIC_BAP_DOMAIN"
+              value: "mni-mc-bap"
           containerPort: 3000
 
         - name: mni-mc-api
@@ -42,6 +44,8 @@ helmCharts:
               value: "http://ctr.mni-cloud.svc/v1alpha1"
             - name: "NEXT_PUBLIC_MNI_BS_ENDPOINT"
               value: "http://bs.mni-cloud.svc/v1alpha1"
+            - name: "NEXT_PUBLIC_MNI_BAP_ENDPOINT"
+              value: "http://tnt.mni-cloud.svc/v1alpha1"
             - name: "NEXTAUTH_URL"
               value: "url.replacethis"
             - name: "NEXTAUTH_SECRET"
