--- a/manifests/components/mni-mc/0.2.4/ingress.yaml
+++ b/manifests/components/mni-mc/0.2.4/ingress.yaml
@@ -2,6 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mni-mc
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
+    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
+    nginx.ingress.kubernetes.io/proxy-buffers-size: "16k"
+    nginx.ingress.kubernetes.io/proxy-busy-buffers-size: "32k"
 spec:
   rules:
     - host: hostname.replacethis
