--- a/manifests/components/kubevirt/v1.4.0/kubevirt-cr.yaml
+++ b/manifests/components/kubevirt/v1.4.0/kubevirt-cr.yaml
@@ -7,7 +7,8 @@ spec:
   certificateRotateStrategy: {}
   configuration:
     developerConfiguration:
-      featureGates: []
+      featureGates:
+      - ExpandDisks
   customizeComponents: {}
   imagePullPolicy: IfNotPresent
   workloadUpdateStrategy: {}
