--- a/manifests/components/kubevirt/v1.4.0.yaml
+++ b/manifests/components/kubevirt/v1.4.0.yaml
@@ -7935,7 +7935,8 @@ spec:
   certificateRotateStrategy: {}
   configuration:
     developerConfiguration:
-      featureGates: []
+      featureGates:
+      - ExpandDisks
   customizeComponents: {}
   imagePullPolicy: IfNotPresent
   workloadUpdateStrategy: {}
